--- a/src/styles/FoodList.css
+++ b/src/styles/FoodList.css
@@ -5,23 +5,59 @@
   margin: 20px;
 }
 
+.food-list h4 {
+  border-bottom: 1px solid #ddd;
+  padding-left: 10px;
+  padding-bottom: 2px;
+}
+
 /* カテゴリごとのスタイル */
-.category {
-  margin-top: 20px;
+.food-category {
+  flex: 1 0 calc(33.33% - 20px); /* 各カテゴリーを3列に配置 */
+  min-width: 200px; /* カテゴリーの最小幅を設定 */
+}
+
+.food-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px; /* 列の間隔を調整 */
 }
 
 /* 食材リストのスタイル */
 .food-list ul {
   list-style-type: none;
+  margin-top: 10px;
   padding: 0;
 }
 
 .food-list li {
+  position: relative;
   margin-bottom: 10px;
 }
 
-/* ボタンのスタイル */
-.food-list button {
-  margin-left: 10px;
-  cursor: pointer;
+.food-category li .buttons {
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+
+.food-category li .buttons button:last-child {
+  margin-right: 10px;
+}
+
+
+.food-item {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.food-name {
+  text-align: left;
+  margin-left: 5px;
+}
+
+.food-amount {
+  text-align: right;
+  margin-right: 180px;
 }
